# ackibot

./: .gitignore  work.txt
FW/Arduino_Motor_Controller/: Arduino_Motor_Controller.ino  CRC16.hpp  fw_pkgs.hpp  type_shorts.h
ROS2/ackibot_ws/scripts/: ackibot_basic_flow.sh  mybot_run_sbc.sh
scripts/: ackibot_basic_flow.sh  mybot_joy.sh
src/ackibot_node/: CMakeLists.txt  package.xml
src/ackibot_node/include/: fw_pkgs.hpp
src/ackibot_node/src/: diff_drive_controller.cpp  diff_drive_controller.hpp  fw_node.cpp  fw_node.hpp  odometry.hpp
src/ackibot_teleop/: CMakeLists.txt  package.xml
src/ackibot_teleop/config/: ps3.config.yaml  sony.config.yaml
src/ackibot_teleop/launch/: teleop.launch.py
src/ackibot_utils/: CMakeLists.txt  package.xml
src/ackibot_utils/ackibot_utils/: uname.py  usb_mapper.py
src/joy/src/: joy.cpp
src/mybot_bringup/: CMakeLists.txt  package.xml
src/mybot_bringup/config/: ekf.yaml  twist_mux_topics.yaml
src/mybot_bringup/launch/: imu.launch.py  robot.launch.py  rviz2.launch.py  state_publisher.launch.py
src/mybot_bringup/param/: mybot.yaml
src/mybot_node/src/: diff_drive_controller.cpp  fw_node.cpp  main.cpp  odometry.cpp
src/mybot_teleop/launch/: teleop.launch.py
src/mybot_teleop/src/: joy_node.cpp
src/mybot_utils/: CMakeLists.txt  package.xml
src/twist_mux/: .gitignore
src/twist_mux/config/: twist_mux_locks.yaml
src/twist_mux/include/twist_mux/: params_helpers.hpp
src/twist_mux/src/: twist_mux.cpp  twist_mux_diagnostics.cpp
