<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackibot_utils</name>
  <version>0.0.1</version>
  <description>
    Utils SW
  </description>
  <maintainer email="max@birley.us">Max Birley</maintainer>
  <license>Apache 2.0</license>
  <url type="website">myrobotkits.us</url>
  <url type="repository">https://github.com/Mdbirley/ackibot</url>
  <author email="milos.subotic.sm@gmail.com">Milos Subotic</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
